# python-docker-sample

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile
python_src/: db.sqlite3
python_src/config/: urls.py
python_src/myapp/: views.py
scripts/: debug_setup.sh  run.sh
src/config/: settings.py
src/myapp/templates/myapp/: hello.html
