[project]
name = "hoge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sio", email = "good.saltydog@gmail.com" }
]
dependencies = [
    "uvicorn>=0.26.0",
    "django>=4.2.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "hoge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dist/hoge"]

[tool.rye.scripts]
dev_server = { cmd = "python manage.py runserver 0.0.0.0:8000" }
server = { cmd = "uvicorn config.asgi:application --host 0.0.0.0 --port 8000" }
